--- a/styles.css
+++ b/styles.css
@@ -48,6 +48,8 @@ h5{
     font-size: 25px;
     font-weight: bold;
     padding-top: 50px;
+    font-family: 'EthnocentricRg-Regular';
+}
 
 }
 winner{
